--- a/.github/workflows/crc.yml
+++ b/.github/workflows/crc.yml
@@ -7,7 +7,8 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/ga_push_to_azure@main
+      - uses: actions/checkout@v2
+      - uses: andrewperlas/azure-resume@main
         with:
           source_dir: "web"
           container_name: "$web"
