--- a/.github/workflows/crc.yml
+++ b/.github/workflows/crc.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_DEV_CREDENTIALS }}
 
       - name: Upload to blob storage
         uses: azure/CLI@v1
