--- a/.github/workflows/crc.yml
+++ b/.github/workflows/crc.yml
@@ -17,7 +17,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob upload-batch --account-name apcrcdevstorage1 --auth-mode key -d '$web' -s .
+            az storage blob upload-batch --account-name apcrcdevstorage1 --auth-mode key -s .\web\ -d '$web'
       - name: Purge CDN endpoint
         uses: azure/CLI@v1
         with:
